# aging_paper_code

./: README.md
code/: agent_simulation_notebook.ipynb  convert_death_rates.ipynb  fit_human_data.py  fit_nonhuman_data.py  fit_specific_human_data.py  format_animal_data.ipynb  format_hmd_data.sh  landscape.py  landscape_notebook.ipynb  look_at_fit.ipynb  plot_agent_based.ipynb  redo_bad_fits.py
code/fitness_landscape/: Cargo.toml
code/fitness_landscape/src/: main.rs
code/fitness_landscape/src/gla_package/: gla.rs  landscape.rs  mod.rs
code/gla_package/: fit.c  fit.pyx  gla.c  gla.pyx  landscape.c  landscape.pyx  setup.py
mortality_data/animals_and_plants/: 41586_2014_BFnature12789_MOESM42_ESM.xls  excluded_data.txt
mortality_data/animals_and_plants/data/: Alpine swift (Apus melba).csv  Armed saltbush (Atriplex acanthocarpa).csv  Bali mynah (Leucopsar rothschildi).csv  Borderea (Borderea pyrenaica).csv  Chamois (Rupicapra rupicapra).csv  Collared flycatcher (Ficedula albicollis).csv  Common lizard (Lacerta vivipara).csv  Desert tortoise (Gopherus agassizii).csv  Freshwater crocodile (Crocodylus johnsoni).csv  Fruit fly (Drosophila melanogaster).csv  Geonoma palm (Geonoma orbignyana).csv  Great rhododendron (Rhododendron maximum).csv  Great tit (Parus major).csv  Human louse (Pediculus humanus).csv  Hunter gatherers (Homo sapiens).csv  Hydra (Hydra magnipapillata).csv  Hypericum (Hypericum cumulicola).csv  Killer whale (Orcinus orca).csv  (+18 more)
parameters/animals_and_plants/: animals_and_plants_GLA.csv  animals_and_plants_heligman.csv  animals_and_plants_siler.csv
(+179 files in other folders)
